# teamsnap-integration

./: .gitignore  CLAUDE.md  MAINTENANCE.md  QUICKSTART.md  README.md  config.ini.template  example.py  explore_api.py  monitor_api.py  pyproject.toml  requirements.txt  teamsnap_auth.py  teamsnap_client.py  view_all_data.py
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-pr-comment.yml  mcp-ci.yml  mcp-update-dependencies.yml  monitor-api.yml  update-dependencies.yml
api_snapshots/: README.md  latest.json  snapshot_20251113_181221.json  snapshot_20251113_181226.json
teamsnap_mcp/: .env.example  .gitignore  CLAUDE_MCP.md  MAINTENANCE.md  QUICKSTART.md  README.md  claude_desktop_config.json  client.py  pyproject.toml  server.py
teamsnap_mcp/tests/: __init__.py  conftest.py  test_client.py  test_server.py
tests/: __init__.py  test_imports.py
